fix for header overflow

--- a/src/component/header.scss
+++ b/src/component/header.scss
@@ -100,6 +100,7 @@
             justify-content: flex-end;
             gap: $spacing-6;
             margin: $spacing-6;
+            width: auto;
         }
 
         &__nav-toggle {
